Tutorial/tut6/ASTGenExercises/cau1/target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'", "'='", "'+'", "'+.'", "'-'", 
                     "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "'('", "')'", "'['", "']'", "':'", "'.'", "','", "';'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BODY", "BREAK", "CONTINUE", "DO", "ELSE", 
                      "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "TRUE", "FALSE", "ENDDO", "ASSIGN", 
                      "ADD_INT", "ADD_FLOAT", "SUB_INT", "SUB_FLOAT", "MUL_INT", 
                      "MUL_FLOAT", "DIV_INT", "DIV_FLOAT", "INT_REMAINDER", 
                      "NOT", "AND", "OR", "EQUAL", "NOT_EQUAL", "LESS_THAN", 
                      "GREATER_THAN", "LESS_EQUAL", "GREATER_EQUAL", "NOT_EQUAL_FLOAT", 
                      "LESS_THAN_FLOAT", "GREATER_THAN_FLOAT", "LESS_EQUAL_FLOAT", 
                      "GREATER_EQUAL_FLOAT", "LP", "RP", "LSB", "LRB", "COLON", 
                      "DOT", "COMMA", "SEMI", "LB", "RB", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "COMMENT", "UNTERMINATED_COMMENT", 
                      "IDENTIFIER", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_dec = 1
    RULE_var_list = 2
    RULE_variable = 3
    RULE_non_initial = 4
    RULE_var_primitive = 5
    RULE_var_array = 6
    RULE_initial = 7
    RULE_literal = 8
    RULE_boolean_literal = 9
    RULE_array_literal = 10
    RULE_func_dec = 11
    RULE_list_vardec = 12
    RULE_list_stmt = 13
    RULE_stmt = 14
    RULE_assign_stmt = 15
    RULE_if_stmt = 16
    RULE_for_stmt = 17
    RULE_while_stmt = 18
    RULE_do_while_stmt = 19
    RULE_break_stmt = 20
    RULE_continue_stmt = 21
    RULE_call_stmt = 22
    RULE_return_stmt = 23
    RULE_exp = 24
    RULE_relational_exp = 25
    RULE_logical_binary_exp = 26
    RULE_adding_exp = 27
    RULE_multiplying_exp = 28
    RULE_logical_unary_exp = 29
    RULE_sign_exp = 30
    RULE_index_exp = 31
    RULE_operand = 32
    RULE_func_call_exp = 33

    ruleNames =  [ "program", "var_dec", "var_list", "variable", "non_initial", 
                   "var_primitive", "var_array", "initial", "literal", "boolean_literal", 
                   "array_literal", "func_dec", "list_vardec", "list_stmt", 
                   "stmt", "assign_stmt", "if_stmt", "for_stmt", "while_stmt", 
                   "do_while_stmt", "break_stmt", "continue_stmt", "call_stmt", 
                   "return_stmt", "exp", "relational_exp", "logical_binary_exp", 
                   "adding_exp", "multiplying_exp", "logical_unary_exp", 
                   "sign_exp", "index_exp", "operand", "func_call_exp" ]

    EOF = Token.EOF
    BODY=1
    BREAK=2
    CONTINUE=3
    DO=4
    ELSE=5
    ELSEIF=6
    ENDBODY=7
    ENDIF=8
    ENDFOR=9
    ENDWHILE=10
    FOR=11
    FUNCTION=12
    IF=13
    PARAMETER=14
    RETURN=15
    THEN=16
    VAR=17
    WHILE=18
    TRUE=19
    FALSE=20
    ENDDO=21
    ASSIGN=22
    ADD_INT=23
    ADD_FLOAT=24
    SUB_INT=25
    SUB_FLOAT=26
    MUL_INT=27
    MUL_FLOAT=28
    DIV_INT=29
    DIV_FLOAT=30
    INT_REMAINDER=31
    NOT=32
    AND=33
    OR=34
    EQUAL=35
    NOT_EQUAL=36
    LESS_THAN=37
    GREATER_THAN=38
    LESS_EQUAL=39
    GREATER_EQUAL=40
    NOT_EQUAL_FLOAT=41
    LESS_THAN_FLOAT=42
    GREATER_THAN_FLOAT=43
    LESS_EQUAL_FLOAT=44
    GREATER_EQUAL_FLOAT=45
    LP=46
    RP=47
    LSB=48
    LRB=49
    COLON=50
    DOT=51
    COMMA=52
    SEMI=53
    LB=54
    RB=55
    INTEGER_LITERAL=56
    FLOAT_LITERAL=57
    STRING_LITERAL=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    COMMENT=61
    UNTERMINATED_COMMENT=62
    IDENTIFIER=63
    WS=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def var_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Var_decContext)
            else:
                return self.getTypedRuleContext(MCParser.Var_decContext,i)


        def func_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Func_decContext)
            else:
                return self.getTypedRuleContext(MCParser.Func_decContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.VAR:
                self.state = 68
                self.var_dec()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.FUNCTION:
                self.state = 74
                self.func_dec()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MCParser.VAR, 0)

        def COLON(self):
            return self.getToken(MCParser.COLON, 0)

        def var_list(self):
            return self.getTypedRuleContext(MCParser.Var_listContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = MCParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(MCParser.VAR)
            self.state = 83
            self.match(MCParser.COLON)
            self.state = 84
            self.var_list()
            self.state = 85
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_var_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_list" ):
                return visitor.visitVar_list(self)
            else:
                return visitor.visitChildren(self)




    def var_list(self):

        localctx = MCParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.variable()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 88
                self.match(MCParser.COMMA)
                self.state = 89
                self.variable()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_initial(self):
            return self.getTypedRuleContext(MCParser.Non_initialContext,0)


        def initial(self):
            return self.getTypedRuleContext(MCParser.InitialContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.non_initial()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.initial()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_initialContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_primitive(self):
            return self.getTypedRuleContext(MCParser.Var_primitiveContext,0)


        def var_array(self):
            return self.getTypedRuleContext(MCParser.Var_arrayContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_non_initial

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_initial" ):
                return visitor.visitNon_initial(self)
            else:
                return visitor.visitChildren(self)




    def non_initial(self):

        localctx = MCParser.Non_initialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_non_initial)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.var_primitive()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.var_array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_primitiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_primitive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_primitive" ):
                return visitor.visitVar_primitive(self)
            else:
                return visitor.visitChildren(self)




    def var_primitive(self):

        localctx = MCParser.Var_primitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_primitive)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(MCParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MCParser.IDENTIFIER, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.LSB)
            else:
                return self.getToken(MCParser.LSB, i)

        def INTEGER_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.INTEGER_LITERAL)
            else:
                return self.getToken(MCParser.INTEGER_LITERAL, i)

        def LRB(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.LRB)
            else:
                return self.getToken(MCParser.LRB, i)

        def getRuleIndex(self):
            return MCParser.RULE_var_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_array" ):
                return visitor.visitVar_array(self)
            else:
                return visitor.visitChildren(self)




    def var_array(self):

        localctx = MCParser.Var_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MCParser.IDENTIFIER)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.match(MCParser.LSB)
                self.state = 107
                self.match(MCParser.INTEGER_LITERAL)
                self.state = 108
                self.match(MCParser.LRB)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MCParser.LSB):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_primitive(self):
            return self.getTypedRuleContext(MCParser.Var_primitiveContext,0)


        def ASSIGN(self):
            return self.getToken(MCParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(MCParser.LiteralContext,0)


        def var_array(self):
            return self.getTypedRuleContext(MCParser.Var_arrayContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_initial

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitial" ):
                return visitor.visitInitial(self)
            else:
                return visitor.visitChildren(self)




    def initial(self):

        localctx = MCParser.InitialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initial)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.var_primitive()
                self.state = 114
                self.match(MCParser.ASSIGN)
                self.state = 115
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.var_array()
                self.state = 118
                self.match(MCParser.ASSIGN)
                self.state = 119
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LITERAL(self):
            return self.getToken(MCParser.INTEGER_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(MCParser.FLOAT_LITERAL, 0)

        def boolean_literal(self):
            return self.getTypedRuleContext(MCParser.Boolean_literalContext,0)


        def STRING_LITERAL(self):
            return self.getToken(MCParser.STRING_LITERAL, 0)

        def array_literal(self):
            return self.getTypedRuleContext(MCParser.Array_literalContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = MCParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INTEGER_LITERAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(MCParser.INTEGER_LITERAL)
                pass
            elif token in [MCParser.FLOAT_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(MCParser.FLOAT_LITERAL)
                pass
            elif token in [MCParser.TRUE, MCParser.FALSE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.boolean_literal()
                pass
            elif token in [MCParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.match(MCParser.STRING_LITERAL)
                pass
            elif token in [MCParser.LB]:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.array_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(MCParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MCParser.FALSE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_boolean_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean_literal" ):
                return visitor.visitBoolean_literal(self)
            else:
                return visitor.visitChildren(self)




    def boolean_literal(self):

        localctx = MCParser.Boolean_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_boolean_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not(_la==MCParser.TRUE or _la==MCParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.LiteralContext)
            else:
                return self.getTypedRuleContext(MCParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_array_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_literal" ):
                return visitor.visitArray_literal(self)
            else:
                return visitor.visitChildren(self)




    def array_literal(self):
